src/objects/ProjDash_ProjectPulse__c.object
<CustomObject>
    <description>ProjDash - This custom object holds all pulses for a project</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <description>Project Pulse Accomplishments</description>
        <inlineHelpText>Please enter individual Accomplishments on a separate line</inlineHelpText>
        <label>Accomplishments</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Action_Items__c</fullName>
        <description>Project Pulse Action Items</description>
        <inlineHelpText>Please enter individual Action Items on a separate line</inlineHelpText>
        <label>Action Items</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blockers__c</fullName>
        <description>Project Pulse Blockers</description>
        <inlineHelpText>Please enter individual Blockers on a separate line</inlineHelpText>
        <label>Blockers</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Escalations__c</fullName>
        <inlineHelpText>Please enter separate Escalations in the following format:
1 - 
2 - 
3 -</inlineHelpText>
        <label>Escalations</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
                <value>
                    <fullName>Close-Out/Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <referenceTo>ProjDash_Project__c</referenceTo>
        <relationshipLabel>Project Pulses</relationshipLabel>
        <relationshipName>Project_Pulses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pulse_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Approval of the pulse record, as a part of Approval action this fields need to be updated to trigger the process builder.</description>
        <label>Pulse Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Pulse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Pulse_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Project Pulse</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Pulses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>